--- a/public/index.html
+++ b/public/index.html
@@ -47,5 +47,6 @@
 
   <body>
     <div id="root"></div>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
   </body>
 </html>
